--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,38 @@
-
-version: '3.8'
+version: "3.9"
 
 services:
-  cms_postgres:
+  backend:
+    build: 
+      context: ./backend
+    container_name: cms_backend
+    restart: always
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./backend/app:/app
+    depends_on:
+      - postgres
+
+  postgres:
     image: postgres:14
     container_name: cms_postgres
+    restart: always
     environment:
-      POSTGRES_PASSWORD: root
-      POSTGRES_USER: root
-    ports:
-      - "5432:5432"
+      POSTGRES_USER: pitadmin
+      POSTGRES_PASSWORD: Pitubuntu1978!@
+      POSTGRES_DB: cms
     volumes:
       - cms_pgdata:/var/lib/postgresql/data
-      - ./backend/db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-
     ports:
-      - "5433:5432"
+      - "5432:5432"
 
   adminer:
     image: adminer
     container_name: cms_adminer
     restart: always
     ports:
-      - 8080:8080
-
-  backend:
-    build: ./backend
-    container_name: cms_backend
-    restart: always
-    volumes:
-      - ./backend:/app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - postgres
+      - "8080:8080"
 
 volumes:
   cms_pgdata:
+
