--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,29 @@
-version: "3.9"
-
 services:
   backend:
-    build: 
+    build:
       context: ./backend
-    container_name: cms_backend
-    restart: always
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    volumes:
+      - ./backend:/app
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend/app:/app
     depends_on:
       - postgres
 
   postgres:
     image: postgres:14
-    container_name: cms_postgres
     restart: always
     environment:
       POSTGRES_USER: pitadmin
       POSTGRES_PASSWORD: Pitubuntu1978!@
       POSTGRES_DB: cms
-    volumes:
-      - cms_pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    volumes:
+      - cms_pgdata:/var/lib/postgresql/data
 
   adminer:
     image: adminer
-    container_name: cms_adminer
     restart: always
     ports:
       - "8080:8080"
